--- a/src/app/components/hero/hero.html
+++ b/src/app/components/hero/hero.html
@@ -8,7 +8,7 @@
     </p>
     <div class="hero-buttons">
       <a class="cta-button" href="#contact">Solicitar Cita</a>
-      <button class="secondary-button">Ver Servicios</button>
+      <a class="secondary-button" href="#services">Ver Servicios</a>
     </div>
     <!--<div class="contact-info">
       <div class="contact-item">
@@ -23,6 +23,6 @@
   </section>
 
   <section class="Section-Img">
-    <img src="../../../../siennaPortada.jpg" alt="Clínica Veterinaria SiennaVet">
+    <img src="../../../../siennaPortada2.png" alt="Clínica Veterinaria SiennaVet">
   </section>
 </main>
