--- a/src/app/components/service/service.html
+++ b/src/app/components/service/service.html
@@ -12,7 +12,7 @@
         La Medicina Interna es la especialidad médica hospitalaria que engloba el diagnóstico,
         tratamiento y el seguimiento de enfermedades complejas, generalmente crónicas.
       </p>
-      <!--<button class="service-button">Más Información</button>-->
+      <button class="service-button">Más Información</button>
     </div>
 
     <div class="service-card">
@@ -21,7 +21,7 @@
       <p>
         Disponible 24/7 con veterinarios y auxiliares altamente cualificados. Sistema de triaje para priorizar casos críticos.
       </p>
-      <button class="service-button">Llamar Urgencias</button>
+      <a class="service-button" href="#contact">Llamar Urgencias</a>
     </div>
 
     <div class="service-card">
@@ -30,7 +30,7 @@
       <p>
         Amplia sala de cuidados perfectamente acondicionada para todos los animales. Disponible telefónica y presencialmente 24 horas al día.
       </p>
-      <button class="service-button">Solicitar Información</button>
+      <a class="service-button" href="#contact">Solicitar Información</a>
     </div>
 
     <div class="service-card">
@@ -48,7 +48,7 @@
       <p>
         Baño completo, corte de uñas, limpieza de oídos y vaciado de glándulas. Aseo higiénico y cosmético para cada tipo de pelaje.
       </p>
-      <button class="service-button">Reservar Cita</button>
+      <a class="service-button" href="#contact">Reservar Cita</a>
     </div>
   </div>
 </section>
