--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -65,6 +65,16 @@
               <span class="link-text">Mensajes</span>
             </a>
           </li>
+          <li>
+            <a
+              routerLink="/dashboard/ficha-actualizaciones"
+              routerLinkActive="active"
+              class="sidebar-link"
+            >
+              <span class="icon">📋</span>
+              <span class="link-text">Actualizaciones</span>
+            </a>
+          </li>
         </ul>
       </nav>
       <div class="logout-container">
