--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -78,6 +78,7 @@
         </ul>
       </nav>
       <div class="logout-container">
+        <p class="current-user">🧑‍⚕️ {{ getCurrentUser() }}</p>
         <button class="logout-button" (click)="logout()">
           <span class="icon">🚪</span>
           <span class="link-text">Cerrar Sesión</span>
