--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,5 +1,5 @@
 <main class="login-form">
-  <div>
+  <div class="global-container">
     <h2>SiennaVet</h2>
     <p>Bienvenido</p>
 
@@ -23,6 +23,6 @@
       </span>
       }
     </form>
-    <a href="#" class="link-text" (click)="volver()">volver</a>
+    <a href="#" class="link-text" (click)="volver()">⬅ Volver</a>
   </div>
 </main>
