--- a/src/app/components/service/service.html
+++ b/src/app/components/service/service.html
@@ -12,7 +12,7 @@
         La Medicina Interna es la especialidad médica hospitalaria que engloba el diagnóstico,
         tratamiento y el seguimiento de enfermedades complejas, generalmente crónicas.
       </p>
-      <button class="service-button">Más Información</button>
+      <a class="service-button" href="#contact">Más Información</a>
     </div>
 
     <div class="service-card">
@@ -39,7 +39,7 @@
       <p>
         Nuestras mascotas necesitan vacunas dependiendo del tipo (perros, gatos o conejos) para estar protegidos y prevenir enfermedades.
       </p>
-      <!--<button class="service-button">Ver Calendario</button>-->
+      <a class="service-button" href="#contact">Ver Calendario</a>
     </div>
 
     <div class="service-card">
