--- a/src/app/pages/login/login.css
+++ b/src/app/pages/login/login.css
@@ -7,9 +7,9 @@
   margin: auto;
   background: linear-gradient(135deg, var(--fondo-secundario) 0%, var(--fondo) 100%);
   padding: 20px;
-  
+
   > div {
-    background-color: var(--fondo);
+    background-color: white;
     color: var(--texto);
     border-radius: 20px;
     padding: 40px;
@@ -25,7 +25,7 @@
 
 .login-form h2 {
   color: var(--principal);
-  
+
   text-align: center;
   font-size: 2.2rem;
   margin: 0;
